--- a/PlayBooks_For_Test/Test_Check.yaml
+++ b/PlayBooks_For_Test/Test_Check.yaml
@@ -1,9 +1,9 @@
-- name: My first play
-  hosts: Linux-01_Host
-  tasks:
-   - name: Ping my hosts
-     ansible.builtin.ping:
+---
+  - hosts: Linux-01_Host
+    tasks:
+     - name: Ping my hosts
+       ansible.builtin.ping:
 
-   - name: Print message
-     ansible.builtin.debug:
-      msg: Hello world
+     - name: Print message
+       ansible.builtin.debug:
+        msg: Hello world
