PlayBook/Ping.yaml_0.0.1

--- a/PlayBook/Ping.yaml
+++ b/PlayBook/Ping.yaml
@@ -1,7 +1,7 @@
-name: Ping Servers
-hosts: Linux-01_Host
-become: yes
+- name: Ping Servers
+  hosts: Linux-01_Host
+  become: yes
 
-tasks:
-- name: Task ping
-  ping:
+  tasks:
+  - name: Task ping
+    ping:
