--- a/PlayBook/Ping.yaml
+++ b/PlayBook/Ping.yaml
@@ -4,3 +4,11 @@
     tasks:
     - name: Task ping
       ping:
+
+    - name: Update cache
+      apt:
+       update_cache: yes
+
+    - name: Upgrade
+      apt: 
+       upgrade: yes 
