PlayBook/<rename 'Ping.yaml'>/PB_01.yaml_1.0.1

--- a/PlayBook/PB_01.yaml
+++ b/PlayBook/PB_01.yaml
@@ -12,3 +12,8 @@
     - name: Upgrade
       apt: 
        upgrade: yes 
+
+    - name: Install apache2
+      apt:
+       pkg: apatche2
+       state: present
