--- a/Test/Test_Check.yaml
+++ b/Test/Test_Check.yaml
@@ -1,9 +1,7 @@
 ---
   - hosts: Win11_Host
     tasks:
-     - name: Ping my hosts
-       ansible.builtin.ping:
 
      - name: Print message
-       ansible.builtin.debug:
-        msg: Hello world
+       debug:
+         msg: Hello world
