--- a/Test/From_linux_to_linux.yaml
+++ b/Test/From_linux_to_linux.yaml
@@ -1,36 +1,35 @@
 ---
-- name: Download file from linux and save to windows
+- name: Pobierz plik z Linuxa i zapisz na serwerze linux_server
   hosts: linux-01_Host
   tasks:
-    - name: Read file content on Linux 
-        command: cat /patch/TEST.txt
-        register: file_content
+    - name: Odczytaj zawartość pliku na Linuxie 
+      command: cat /patch/TEST.txt
+      register: file_content
 
-        - name: View file contents 
-          debug:
-            msg: "{{ file_content.stdout }}"
+    - name: Wyświetl zawartość pliku 
+      debug:
+        msg: "{{ file_content.stdout }}"
 
-        - name: LS linux
-          command: ls /path
-          register: files_ls 
+    - name: Wylistuj pliki w katalogu /path na Linuxie
+      command: ls /path
+      register: files_ls 
 
-        - name: View file contents
-          debug:
-            msg: "{{ file_ls.stdout }}"
+    - name: Wyświetl listę plików
+      debug:
+        msg: "{{ files_ls.stdout }}"
 
-        - name: Download file from linux
-          fetch:
-            src: /path/TEST.txt
-            dest: /tmp/ansible_files/TEST.txt
-            flat: yes
+    - name: Pobierz plik z Linuxa
+      fetch:
+        src: /path/TEST.txt
+        dest: /tmp/ansible_files/TEST.txt
+        flat: yes
 
-- name: Copy file to Linux
-  hosts: Linux-01_Host
+- name: Skopiuj plik na Linuxa
+  hosts: ubuntu-22
   vars:
     nazwa: "pliktestowy"
   tasks:
-    - name: Copy file to Linux
-        copy:
-          src: /tmp/ansible_file/TEST.txt
-          dest: /home.TEST.txt
-       
+    - name: Skopiuj plik na Linuxa
+      copy:
+        src: /tmp/ansible_files/TEST.txt
+        dest: /home/TEST.txt
