edit From_linux_to_linux.yaml 1.0.5

--- a/Test/From_linux_to_linux.yaml
+++ b/Test/From_linux_to_linux.yaml
@@ -11,7 +11,7 @@
         msg: "{{ file_content.stdout }}"
 
     - name: Wylistuj pliki w katalogu /path na Linuxie
-      command: ls /path
+      command: ls /home/linux-01/patch
       register: files_ls 
 
     - name: Wyświetl listę plików
