edit From_linux_to_windows.yaml 1.0.2

--- a/Test/2.From_linux_to_windows.yaml
+++ b/Test/2.From_linux_to_windows.yaml
@@ -32,4 +32,4 @@
     - name: Skopiuj plik do Windows
       win_copy:
         src: /tmp/ansible_files/TEST.txt
-        dest: C:\data\TEST.txt
+        dest: C:\ansible\TEST.txt
