--- a/Test/3.Linux_to_windows.yaml
+++ b/Test/3.Linux_to_windows.yaml
@@ -1,9 +1,9 @@
 ---
 - name: Pobierz plik z Linux i zapisz na Windows
-  hosts: ubuntu-22_Host
+  hosts: linux-01_Host
   tasks:
     - name: Odczytaj zawartość pliku TEST.txt na Linuxie
-      command: cat /home/ubuntu-22/patch/TEST.txt
+      command: cat /home/linux-01/patch/TEST.txt
       register: file_content
 
     - name: Wyświetl zawartość pliku TEST.txt
@@ -11,7 +11,7 @@
         msg: "{{ file_content.stdout }}"
 
     - name: LS linux
-      command: ls /home/ubuntu-22/patch
+      command: ls /home/linux-01/patch
       register: files_ls 
 
     - name: Wyświetl zawartość plików
@@ -20,7 +20,7 @@
 
     - name: Pobierz plik z Linux
       fetch:
-        src: /home/ubuntu-22/patch/TEST.txt
+        src: /home/linux-01/patch/TEST.txt
         dest: /tmp/ansible_files/TEST.txt
         flat: yes
 
