--- a/Test/3.Linux_SQL_windows.yaml
+++ b/Test/3.Linux_SQL_windows.yaml
@@ -45,12 +45,10 @@
     playbook_name: "3.Linux_SQL_windows.yaml"
   tasks:
     - name: Wstaw dane do tabeli PostgreSQL
-      ansible.builtin.shell:
-        db: "{{ db_name }}"
-        login_user: "{{ db_user }}"
-        login_password: "{{ db_password }}"
-        host: "{{ db_host }}"
-        port: 5432
-        query: |
-          INSERT INTO your_table_name (id, file_name, playbook_name, date)
-          VALUES (DEFAULT, '{{ file_name }}', '{{ playbook_name }}', NOW());
+      ansible.builtin.shell: |
+        PGPASSWORD="{{ db_password }}" psql -h {{ db_host }} -U {{ db_user }} -d {{ db_name }} -c "
+        INSERT INTO your_table_name (id, file_name, playbook_name, date)
+        VALUES (DEFAULT, '{{ file_name }}', '{{ playbook_name }}', NOW());
+        "
+      args:
+        executable: /bin/bash
