--- a/Test/3.Linux_SQL_windows.yaml
+++ b/Test/3.Linux_SQL_windows.yaml
@@ -34,21 +34,31 @@
         src: /tmp/ansible_files/TEST.txt
         dest: C:\ansible\TEST.txt
 
-- name: Dodaj dane do PostgreSQL
+---
+- name: Dodaj dane do bazy danych PostgreSQL
   hosts: localhost
+  gather_facts: no
   vars:
-    db_host: 127.0.0.1
     db_name: AWX
     db_user: postgres
     db_password: 1992
+    db_host: 127.0.0.1
+    db_port: 5432
+    table_name: awx_db
     file_name: "TEST.txt"
-    playbook_name: "3.Linux_SQL_windows.yaml"
+    playbook_name: "Przykładowy Playbook"
+    date: "{{ ansible_date_time.iso8601 }}"
+    psql_cmd: >
+      psql -U {{ db_user }} -h {{ db_host }} -p {{ db_port }} -d {{ db_name }} -c
+      "INSERT INTO {{ table_name }} (file_name, playbook_name, date) VALUES ('{{ file_name }}', '{{ playbook_name }}', '{{ date }}');"
+
   tasks:
     - name: Wstaw dane do tabeli PostgreSQL
-      ansible.builtin.shell: |
-        PGPASSWORD="{{ db_password }}" psql -h {{ db_host }} -U {{ db_user }} -d {{ db_name }} -c "
-        INSERT INTO your_table_name (id, file_name, playbook_name, date)
-        VALUES (DEFAULT, '{{ file_name }}', '{{ playbook_name }}', NOW());
-        "
-      args:
-        executable: /bin/bash
+      community.general.command:
+        cmd: "{{ psql_cmd }}"
+        # Jeżeli używasz innej lokalizacji pliku .pgpass, dodaj ścieżkę do zmiennej środowiskowej PGPASSFILE
+        # environment:
+        #   PGPASSFILE: /path/to/.pgpass
+      # Jeżeli masz na celu bezpieczeństwo hasła, skorzystaj z pliku .pgpass:
+      # (Upewnij się, że plik .pgpass jest odpowiednio zabezpieczony i zawiera dane w formacie: hostname:port:database:username:password)
+
