--- a/Test/3.Linux_SQL_windows.yaml
+++ b/Test/3.Linux_SQL_windows.yaml
@@ -36,7 +36,7 @@
 
 - name: Dodaj dane do bazy danych PostgreSQL
   hosts: localhost
-  gather_facts: yes  # Włącz gromadzenie faktów, aby uzyskać zmienną `ansible_date_time`
+  gather_facts: yes  
   vars:
     db_name: AWX
     db_user: postgres
@@ -52,9 +52,7 @@
       "INSERT INTO {{ table_name }} (file_name, playbook_name, date) VALUES ('{{ file_name }}', '{{ playbook_name }}', '{{ date }}');"
 
   tasks:
-    - name: Wstaw dane do tabeli PostgreSQL
-      ansible.builtin.shell:
-        cmd: "{{ psql_cmd }}"
-        environment:
-          PGPASSWORD: "{{ db_password }}"
+  - name: Wstaw dane do tabeli PostgreSQL
+    ansible.builtin.raw: "PGPASSWORD={{ db_password }} psql -h {{ db_host }} -U {{ db_user }} -d {{ db_name }} -c '{{ sql_query }}'"
+
 
