--- a/Test/3.Linux_SQL_windows.yaml
+++ b/Test/3.Linux_SQL_windows.yaml
@@ -48,8 +48,13 @@
 
   tasks:
     - name: Wstaw dane do tabeli PostgreSQL
-  ansible.builtin.raw: |
-    PGPASSWORD={{ db_password }} /usr/bin/psql -h {{ db_host }} -U {{ db_user }} -d {{ db_name }} -c "
-    INSERT INTO {{ table_name }} (file_name, playbook_name, date) 
-    VALUES ('{{ file_name }}', '{{ playbook_name }}', '{{ date }}');"
+  postgresql_query:
+    db: "{{ db_name }}"
+    login_user: "{{ db_user }}"
+    login_password: "{{ db_password }}"
+    port: "{{ db_port }}"
+    query: |
+      INSERT INTO {{ table_name }} (file_name, playbook_name, date)
+      VALUES ('{{ file_name }}', '{{ playbook_name }}', '{{ date }}');
+
 
